--- a/dapp/package.json
+++ b/dapp/package.json
@@ -8,8 +8,10 @@
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/constants": "^5.6.0",
+    "@ethersproject/contracts": "^5.6.1",
     "@ethersproject/keccak256": "^5.6.0",
     "@ethersproject/providers": "^5.6.7",
+    "@ethersproject/units": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
